<resources>
    <string name="app_name">Audio learning</string>
    <string name="HeaderLogin">เข้าสู่ระบบ</string>
    <string name="hintUsername">ชื่อ</string>
    <string name="hintPassword">รหัสผ่าน</string>
    <string name="btnLogin">เข้าสู่ระบบ</string>
    <string name="tv_register">สร้างบัญชีผู้ใช้</string>
    <string name="speech_not_supported">Sorry! Your device doesn \t support speech input</string>
    <string name="speech_prompt">พูดเพื่อสั่งงาน</string>
    <string name="chkRemember">จำฉันไว้</string>
    <string name="progressLoading">Loading...</string>
    <string name="tv_lbl_register">สมัครสมาชิก</string>
    <string name="btnRegister">สมัครสมาชิก</string>
    <string name="btnReset">ล้างข้อมูล</string>
    <string name="tv_row_manin">หมวดหมู่</string>
    <string name="btnSound">ฟังเสียง</string>
    <string name="btnDo">ทำแบบทดสอบ</string>
    <string name="logout">คุณต้องการออกจากระบบหรือไม่ ?</string>
    <string name="submit">ตกลง</string>
    <string name="cancel">ยกเลิก</string>
    <string name="tv_lbl_header">Category</string>
    <string name="btn_Sound">ฟังเสียง</string>
    <string name="btn_play">ทำแบบทดสอบ</string>
    <string name="btn_send_question">ถัดไป</string>
    <string name="tv_header_score">ผลคะแนนที่ทำได้</string>
    <string name="initStr">\t\t\t1.เข้าสู่หน้าหลักโดยการใช้นิ้วเพียง1นิ้วแตะกลางหน้าจอตามรหัสการเข้าใช้งานที่ตั้งไว้\n\n\t\t\t2.ใช้นิ้วเพียง1นิ้วลากหน้าจอลง เมื่อพร้อมที่จะเลือกหมวดหมู่ เลือกฟังเสียง เลือกทำแบบทดสอบ และเมื่อพร้อมที่จะตอบคำถามในแบบทดสอบ\n\n\t\t\t3.กลับสู่หน้าหลักโดยการ ลากหน้าจอลง1ครั้งแล้วพูดว่า’’กลับสู่หน้าหลัก’’</string>
    <string name="tv_initHeader">การใช้งาน</string>
    <string name="tv_bottom">หากพร้อมเข้าใช้งานแล้ว ลากหน้าจอลง1ครั้งค่ะ</string>
</resources>
