<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:background="#edce8a"
        android:textColor="#e95151"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:paddingTop="20dp"
        android:text="@string/tv_initHeader"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold" />
    <TextView
        android:textColor="#000"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="24dp"
        android:text="@string/initStr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="18dp"
        android:textColor="#FFF"
        android:text="@string/tv_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
</android.support.v4.widget.SwipeRefreshLayout>