<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#f48db0"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_lbl_headerLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HeaderLogin"
        android:textColor="#FFF"
        android:textSize="50sp" />
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:background="#6a818181"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="300dp">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"

            android:layout_marginRight="50dp"
            android:hint="@string/hintUsername"
            android:inputType="text"
            android:textColor="#FFF" />

        <!--<EditText-->
            <!--android:id="@+id/et_password"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="50dp"-->
            <!--android:layout_marginRight="50dp"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:hint="@string/hintPassword"-->
            <!--android:inputType="textPassword"-->
            <!--android:textColor="#FFF" />-->
        <!--<LinearLayout-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->
            <!--<CheckBox-->
                <!--android:id="@+id/chkRemeber"-->
                <!--android:textColor="#FFF"-->
                <!--android:layout_marginLeft="50dp"-->
                <!--android:text="@string/chkRemember"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content" />-->
        <!--</LinearLayout>-->


        <Button
            android:id="@+id/btn_login"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#ae313131"
            android:text="@string/btnLogin"
            android:textColor="#FFF" />
        <TextView
            android:id="@+id/tv_register"
            android:textSize="15sp"
            android:textColor="#FFF"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_marginTop="15dp"
            android:text="@string/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>